--- a/source/_includes/post/sharing.html
+++ b/source/_includes/post/sharing.html
@@ -1,4 +1,5 @@
 <div class="share">
+<!--
 	<div class="addthis_toolbox addthis_default_style ">
 		{% if site.facebook_like %}
 		<a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
@@ -9,11 +10,35 @@
 		{% if site.google_plus_one %}
 		<a class="addthis_button_google_plusone" g:plusone:size="{{ site.google_plus_one_size }}"></a>
 		{% endif %}
+		{% if site.pinterest_pinit %}
+		<a class="addthis_button_pinterest_pinit" pi:pinit:layout="horizontal"></a>
+		{% endif %}
 		{% if site.addthis_button %}
 		<a class="addthis_counter addthis_pill_style"></a>
 		{% endif %}
 	</div>
 	{% if site.addthis_button %}
-	<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid={{ site.addthis_profile_id }}"></script>
+
+	<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-527e0b5965f57456"></script>
 	{% endif %}
+-->
+<div class="addthis_toolbox addthis_default_style">
+     <a class="addthis_button_facebook_like" fb:like:layout="standard"></a> 
+</div> 
+<!-- AddThis Button BEGIN -->
+<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+<a class="addthis_button_preferred_1"></a>
+<a class="addthis_button_preferred_2"></a>
+<a class="addthis_button_preferred_3"></a>
+<a class="addthis_button_preferred_4"></a>
+<a class="addthis_button_compact"></a>
+<a class="addthis_counter addthis_bubble_style"></a>
 </div>
+<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-527e0b5965f57456"></script>
+<!-- AddThis Button END -->
+
+</div>
+
+
