--- a/sass/base/_color.scss
+++ b/sass/base/_color.scss
@@ -6,6 +6,7 @@ $color-gray03: #fff !default;
 $color-gray04: #660000 !default;//深紅溝縫
 $color-gray05: #B30000 !default;//淺紅溝縫
 $color-yellow01: #FFF8D1 !default;
+$color-deepgray01: #666 !default;//搜尋文字
 $color-lightblue: #0000CC !default;
 
 /*
