--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -275,7 +275,7 @@ $header-height: 30px;
 		}
 		&:before{
 			content: "\f002";
-			color: $color-gray03;
+			color: $color-deepgray01;//$color-gray03;//搜尋工具圖示顏色
 			font: 18px $font-icon;
 			line-height: 30px;
 			position: absolute;
@@ -283,7 +283,7 @@ $header-height: 30px;
 			right: 125px;
 		}
 		input[type="text"]{
-			background: #f2f2f2;
+			background: $color-gray01;//#f2f2f2;//搜尋工具底色
 			color: $color-gray02;
 			border: 1px solid $color-gray04;
 			font: 13px $font-default;
@@ -292,9 +292,9 @@ $header-height: 30px;
 			@include transition(0.3s);
 			@include border-radius(15px);
 			&:focus, &:active{
-				background: #fff;
-				border-top: 1px solid $color-gray03;
-				color: $color-gray01;
+				background: $color-gray01;//#fff;//輸入文字時動態顏色
+				//border-top: 1px solid $color-gray03;
+				color: $color-deepgray01;//$color-gray01;//搜尋輸入文字顏色
 				outline: none;
 			}
 		}
