--- a/sass/base/_color.scss
+++ b/sass/base/_color.scss
@@ -7,6 +7,7 @@ $color-gray04: #660000 !default;//深紅溝縫
 $color-gray05: #B30000 !default;//淺紅溝縫
 $color-yellow01: #FFF8D1 !default;
 $color-deepgray01: #666 !default;//搜尋文字
+$color-green01: #CCFF33 !default;//文章標題
 $color-lightblue: #0000CC !default;
 
 /*
