--- a/sass/parts/_post.scss
+++ b/sass/parts/_post.scss
@@ -6,6 +6,12 @@
 			margin-left: 0;
 		}
 	}
+	h2.title{
+		a{
+			@include link-colors( $color-main,$color-green01);//首頁文章標題
+			@include transition(0.3s);
+		}
+	}
 	.meta{
 		position: absolute;
 		bottom: 20px;
