--- a/sass/parts/_syntax.scss
+++ b/sass/parts/_syntax.scss
@@ -43,7 +43,7 @@ $pre-border: $color-gray03;
 
 article{
 	code, pre{
-		background: $pre-bg;
+		background: $color-gray04;
 		border: 1px solid $pre-border;
 		font-family: $font-mono;
 	}
