add facebook like

--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -17,6 +17,9 @@
 	</div>
 {% else %}
 	<h2 class="title">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h2>
+	<div class="addthis_toolbox addthis_default_style">
+    	<a class="addthis_button_facebook_like" fb:like:layout="standard"></a> 
+	</div> 
 	<div class="entry-content">{{ content }}</div>
 {% endif %}
 
