add facebook like3

--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -18,10 +18,14 @@
 {% else %}
 	<h2 class="title">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h2>
 
-	<div class="entry-content">{{ content }}
+	<div class="addthis_toolbox addthis_default_style">
+    <a class="addthis_button_facebook_like" fb:like:layout="standard"></a> 
+	</div> 
+	<div class="entry-content">
 		<div class="addthis_toolbox addthis_default_style">
     	<a class="addthis_button_facebook_like" fb:like:layout="standard"></a> 
 		</div> 
+		{{ content }}
 	</div>
 {% endif %}
 
