--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -9,13 +9,15 @@
 	</h2>
 	
 	<div class="entry-content">
+		<div class="addthis_toolbox addthis_default_style">
+    	<a class="addthis_button_facebook_like" fb:like:layout="standard"></a> 
+		</div> 
 		{{ content | excerpt }}
 		{% capture excerpted %}{{ content | has_excerpt }}{% endcapture %}
 		{% if excerpted == 'true' %}<a href="{{ root_url }}{{ post.url }}" class="more-link">{{ site.excerpt_link }}</a>{% endif %}
 	</div>
 {% else %}
 	<h2 class="title">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h2>
-
 	<div class="entry-content">
 		<div class="addthis_toolbox addthis_default_style">
     	<a class="addthis_button_facebook_like" fb:like:layout="standard"></a> 
