--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -9,20 +9,30 @@
 	</h2>
 	
 	<div class="entry-content">
-		<div class="addthis_toolbox addthis_default_style">
-    	<a class="addthis_button_facebook_like" fb:like:layout="standard"></a> 
-		</div> 
-		<p>hi,立恩</p>
 		{{ content | excerpt }}
 		{% capture excerpted %}{{ content | has_excerpt }}{% endcapture %}
-		{% if excerpted == 'true' %}<a href="{{ root_url }}{{ post.url }}" class="more-link">{{ site.excerpt_link }}</a>{% endif %}
+		{% if excerpted == 'true' %}
+		<a href="{{ root_url }}{{ post.url }}" class="more-link">{{ site.excerpt_link }}</a>
+		{% endif %}
 	</div>
 {% else %}
 	<h2 class="title">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h2>
 	<div class="entry-content">
+		<!-- AddThis Button -->
 		<div class="addthis_toolbox addthis_default_style">
     	<a class="addthis_button_facebook_like" fb:like:layout="standard"></a> 
 		</div> 
+		<div class="addthis_toolbox addthis_default_style addthis_20x20_style">
+		<a class="addthis_button_preferred_1"></a>
+		<a class="addthis_button_preferred_2"></a>
+		<a class="addthis_button_preferred_3"></a>
+		<a class="addthis_button_preferred_4"></a>
+		<a class="addthis_button_compact"></a>
+		<a class="addthis_counter addthis_bubble_style"></a>
+		</div>
+		<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-527e0b5965f57456"></script>
+		<!-- AddThis Button END -->
 		{{ content }}
 	</div>
 {% endif %}
