add addthis button to all pages2

--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -19,9 +19,10 @@
 	<h2 class="title">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h2>
 	<div class="entry-content">
 		<!-- AddThis Button -->
-		<div class="addthis_toolbox addthis_default_style">
+		<div class="addthis_toolbox addthis_default_style addthis_20x20_style">
     	<a class="addthis_button_facebook_like" fb:like:layout="standard"></a> 
 		</div> 
+		<p> </p>
 		<div class="addthis_toolbox addthis_default_style addthis_20x20_style">
 		<a class="addthis_button_preferred_1"></a>
 		<a class="addthis_button_preferred_2"></a>
