--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -22,9 +22,10 @@
 		<div class="addthis_toolbox addthis_default_style addthis_20x20_style">
     	<a class="addthis_button_facebook_like" fb:like:layout="standard"></a> 
 		</div> 
-		<br/> 
+		<p style="padding : 1em"></p>
 		<div class="addthis_toolbox addthis_default_style addthis_20x20_style">
 		<a class="addthis_button_preferred_1"></a>
+		<p style="padding : 1em"></p>
 		<a class="addthis_button_preferred_2"></a>
 		<a class="addthis_button_preferred_3"></a>
 		<a class="addthis_button_preferred_4"></a>
