--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -28,6 +28,10 @@
 		<a class="addthis_button_preferred_2"></a>
 		<a class="addthis_button_preferred_3"></a>
 		<a class="addthis_button_preferred_4"></a>
+		<a class="addthis_button_plurk"></a>
+		<a class="addthis_button_blogger"></a>
+		<a class="addthis_button_sinaweibo"></a>
+		<a class="addthis_button_wordpress"></a>
 		<a class="addthis_button_compact"></a>
 		<a class="addthis_counter addthis_bubble_style"></a>
 		</div>
