add addthis btn

--- a/source/_includes/post/sharing.html
+++ b/source/_includes/post/sharing.html
@@ -32,17 +32,19 @@
 <a class="addthis_button_preferred_1"></a>
 <a class="addthis_button_preferred_2"></a>
 <a class="addthis_button_preferred_3"></a>
-<a class="addthis_button_preferred_4"></a>
+<a class="addthis_button_google_plusone_share"></a>
 <a class="addthis_button_plurk"></a>
+<a class="addthis_button_linkedin"></a>
 <a class="addthis_button_blogger"></a>
 <a class="addthis_button_sinaweibo"></a>
 <a class="addthis_button_wordpress"></a>
+<a class="addthis_button_preferred_4"></a>
 <a class="addthis_button_compact"></a>
 <a class="addthis_counter addthis_bubble_style"></a>
 </div>
 <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-527e0b5965f57456"></script>
-
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52836c2b4360f9e8"></script>
+<!-- AddThis Button END -->
 <!-- AddThis Button END -->
 
 </div>
