--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -19,7 +19,7 @@
 	<h2 class="title">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h2>
 	<div class="entry-content">
 		<!-- AddThis Button -->
-		<div class="addthis_toolbox addthis_default_style addthis_20x20_style">
+		<div class="addthis_toolbox addthis_default_style">
     	<a class="addthis_button_facebook_like" fb:like:layout="standard"></a> 
 		</div> 
 		<p style="padding : 1px"></p>
@@ -27,11 +27,13 @@
 		<a class="addthis_button_preferred_1"></a>
 		<a class="addthis_button_preferred_2"></a>
 		<a class="addthis_button_preferred_3"></a>
-		<a class="addthis_button_preferred_4"></a>
+		<a class="addthis_button_google_plusone_share"></a>
 		<a class="addthis_button_plurk"></a>
+		<a class="addthis_button_linkedin"></a>
 		<a class="addthis_button_blogger"></a>
 		<a class="addthis_button_sinaweibo"></a>
 		<a class="addthis_button_wordpress"></a>
+		<a class="addthis_button_preferred_4"></a>
 		<a class="addthis_button_compact"></a>
 		<a class="addthis_counter addthis_bubble_style"></a>
 		</div>
