add categories sidebar

--- a/sass/_parts.scss
+++ b/sass/_parts.scss
@@ -2,6 +2,7 @@
 @import "parts/index";
 @import "parts/article";
 @import "parts/post";
+@import "parts/sidebar";
 @import "parts/archive";
 @import "parts/comment";
 @import "parts/footer";
