--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -2,12 +2,12 @@
 {% include head.html %}
 
 <body>
-	<header id="header" class="inner">{% include header.html %}</header>
+	<header id="header" class="innerHeader" role="banner">{% include header.html %}</header>
 	{% unless page.banner == false %}
 		{% include banner.html %}
 	{% endunless %}
 	<div id="content" class="inner">{{ content | expand_urls: root_url }}</div>
-	<footer id="footer" class="inner">{% include footer.html %}</footer>
+	<footer id="footer" class="inner" role="contentinfo">{% include footer.html %}</footer>
 	{% include after_footer.html %}
 </body>
 </html>
