fix article width

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -26,9 +26,9 @@ h2{//文章標題
 	font-size: 1.5em;
 	color: $color-gray03;
 }
-h3{//####標題
+h3{//####標題 ###標題
 	font-size: 1.3em;
-	color: #000000;
+	color: #B22222;
 }
 a{
 	text-decoration: none;
