--- a/sass/parts/_article.scss
+++ b/sass/parts/_article.scss
@@ -3,6 +3,7 @@ article{
 	border-top: 1px solid $color-gray05;
 	padding: 30px 0;
 	position: relative;
+	max-width:1000px;
 	@media screen and (max-width: 800px){
 		padding-bottom: 15px;
 	}
@@ -69,7 +70,7 @@ article{
 			margin-top: 10px;	
 		}
 		h2{//Markdown ##標題
-			color: #808080;//#FFFF00;
+			color: #708090;//#FFFF00;
 			font-weight: 600;//粗體
 			//border-bottom: 1px solid $color-gray04;
 			position: relative;
