--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -2,7 +2,7 @@
 {% include head.html %}
 
 <body>
-	<header id="header" class="inner" role="banner">{% include header.html %}</header>
+	<header id="header" class="innerHeader" role="banner">{% include header.html %}</header>
 	{% unless page.banner == false %}
 		{% include banner.html %}
 	{% endunless %}
