--- a/source/_includes/after_footer.html
+++ b/source/_includes/after_footer.html
@@ -2,4 +2,6 @@
 {% include fancybox.html %} <!-- Delete or comment this line to disable Fancybox -->
 {% include disqus.html %}
 {% include google_analytics.html %}
+{% include facebook_sdk.html %}
 {% include custom/after_footer.html %}
+
