--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -22,3 +22,23 @@
 	width: $width;
 	height: $height;
 }
+
+@mixin post-width{
+	max-width:1050px;
+	@media screen and (max-width: 1430px){
+		width: 75%;
+	}
+	@media screen and (max-width: 1150px){
+		width: 70%;
+	}
+	@media screen and (max-width: 967px){
+		width: 65%;
+	}
+	@media screen and (max-width: 800px){
+		width: 100%;
+		padding-bottom: 15px;
+	}
+	@media screen and (max-width: 600px){
+		padding: 15px 0;
+	}
+}
