--- a/sass/parts/_article.scss
+++ b/sass/parts/_article.scss
@@ -3,23 +3,7 @@ article{
 	border-top: 1px solid $color-gray05;
 	padding: 30px 0;
 	position: relative;
-	max-width:1050px;
-	@media screen and (max-width: 1430px){
-		width: 75%;
-	}
-	@media screen and (max-width: 1150px){
-		width: 70%;
-	}
-	@media screen and (max-width: 967px){
-		width: 65%;
-	}
-	@media screen and (max-width: 800px){
-		width: 100%;
-		padding-bottom: 15px;
-	}
-	@media screen and (max-width: 600px){
-		padding: 15px 0;
-	}
+	@include post-width();
 	h2.title{
 		font-size: 1.8em;
 		font-weight: 300;
@@ -160,22 +144,10 @@ article{
 }
 .share{
 	padding: 15px 0;
-	max-width: 1050px;
 	border-bottom: 1px solid $color-gray06;
 	border-top: 1px solid $color-gray05;
 
-	@media screen and (max-width: 1430px){
-		width: 75%;
-	}
-	@media screen and (max-width: 1150px){
-		width: 70%;
-	}
-	@media screen and (max-width: 967px){
-		width: 65%;
-	}
-	@media screen and (max-width: 800px){
-		width: 100%;
-	}
+	@include post-width();
 
 }
 
