--- a/sass/parts/_comment.scss
+++ b/sass/parts/_comment.scss
@@ -1,10 +1,13 @@
 #comment{
 	padding: 30px 0;
-	@include border-shadow();
+	//@include border-shadow();
+	border-top: 1px solid $color-gray05;
 	h2.title{
 		font-size: 25px;
 		font-weight: 300;
 		line-height: 35px;
 		margin-bottom: 20px;
 	}
+
+	@include post-width();
 }
