--- a/sass/parts/_index.scss
+++ b/sass/parts/_index.scss
@@ -46,8 +46,9 @@
 
 .fakeplace{
  	max-width: $max-width;//1300px;
+ 	height: 20px;
 	border-bottom: 1px solid $color-gray06;
-	border-top: 1px solid $color-gray05;
+	//border-top: 1px solid $color-gray05;
 	margin: 0 0;
 
 	@media screen and (max-width: $max-width){
