--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -73,6 +73,6 @@
 	{% if site.disqus_short_name and site.disqus_show_comment_count == true %}
 	<div class="comments"><a href="{{ root_url }}{% if index %}{{ post.url }}{% endif %}#disqus_thread">Comments</a></div>
 	{% endif %}
-	{% include custom/googleAd.html %}
+	{% include custom/googleAdSmallSquare.html %}
 </div>
 
