--- a/source/_includes/custom/googleAdSmallSquare.html
+++ b/source/_includes/custom/googleAdSmallSquare.html
@@ -1,9 +1,9 @@
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- square2 -->
+<!-- small square -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:250px;height:250px"
+     style="display:inline-block;width:150px;height:150px"
      data-ad-client="ca-pub-1790808934333010"
-     data-ad-slot="1181746287"></ins>
+     data-ad-slot="5611945882"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
