--- a/sass/base/_font.scss
+++ b/sass/base/_font.scss
@@ -1,4 +1,4 @@
-$font-default: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$font-default: "sentytea-platinum", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $font-mono: Menlo, Monaco, "Andale Mono", "lucida console", "Courier New", monospace !default;
 
 $font-icon: FontAwesome;
