modify google ad

--- a/source/_includes/custom/googleAd.html
+++ b/source/_includes/custom/googleAd.html
@@ -1,9 +1,10 @@
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- square2 -->
+<!-- responsive ad -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:250px;height:250px"
+     style="display:block"
      data-ad-client="ca-pub-1790808934333010"
-     data-ad-slot="1181746287"></ins>
+     data-ad-slot="4414414286"
+     data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
